revenue-attribution-sbclone/main/default/objects/SBQQ__QuoteLine__c/fields/AssetActionCategory__c.field-meta.xml
<CustomField>
    <fullName>AssetActionCategory__c</fullName>
    <label>AssetActionCategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Asset_Action_Category</valueSetName>
    </valueSet>
</CustomField>