revenue-attribution-sbclone/main/default/objects/SBQQ__QuoteLine__c/fields/Calculated_Sub_Term__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Sub_Term__c</fullName>
    <formula>IF(ISNULL(SBQQ__SubscriptionTerm__c) || SBQQ__SubscriptionTerm__c == 0, SBQQ__Quote__r.SBQQ__SubscriptionTerm__c ,SBQQ__SubscriptionTerm__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Sub Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>