revenue-attribution-sbclone/main/default/objects/SBQQ__QuoteLine__c/fields/Churn_Amount__c.field-meta.xml
<CustomField>
    <fullName>Churn_Amount__c</fullName>
    <label>Churn Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>