revenue-attribution-sbclone/main/default/objects/SBQQ__QuoteLine__c/fields/Existing_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Existing_Quantity__c</fullName>
    <label>Existing Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>