revenue-attribution-sbclone/main/default/objects/SBQQ__QuoteLine__c/fields/New_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Sale_Amount__c</fullName>
    <label>New Sale Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>